Rename, fix colors

--- a/src/style.css
+++ b/src/style.css
@@ -8,9 +8,9 @@
 }
 
 .intelli-github-definition {
-  background: rgba(14,99,156,.25);
+  background: rgb(14, 99, 156);
 }
 
 .intelli-github-usage {
-  background: rgba(173,214,255,.3);
+  background: rgb(173, 214, 255);
 }
